--- a/01_company/index.html
+++ b/01_company/index.html
@@ -6,6 +6,53 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	test
+	<header>
+		<img src="img/logo.png" alt="">
+
+		<nav>
+			<ul>
+				<li><a href="#">Aktuelles</a></li>
+				<li><a href="#">Philosophie</a></li>
+				<li><a href="#">Besonderheiten</a></li>
+				<li><a href="#">Partner</a></li>
+				<li><a href="#">Kontakt</a></li>
+				<li><a href="#">Impressum</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<div class="photos">
+			<img src="img/pict.jpg" alt="">
+		</div>
+
+		<article>
+			<h1>Sehr geehrte Patienten,</h1>
+
+			<p>wir freuen uns, dass Sie sich für unsere Praxis für moderne Zahnheilkunde interessieren – herzlich willkommen!</p>
+
+			<p>Die Homepage soll Ihnen einen ersten Einblick in das Leistungsspektrum und die Behandlungsphilosophie vermitteln. Es wird Sie interessieren, wie schonend und sorgsam ein Zahnarztbesuch sein kann.</p>
+
+			<p>Sie sind herzlich eingeladen, sich bei einem Besuch in meiner Praxis mit ihren Fragen und Wünschen anzuvertrauen.</p>
+
+			<p>Ihre Dr. Dr. Günther Chmelitschek und Dr. Thomas Chmelitschek</p>
+		</article>
+
+		<aside>
+			<h2>Sprechzeiten</h2>
+
+			<p>Zahnarztpraxis Dr. Dr. Chmelitschek<br>
+			Stollstr. 6<br>
+			83022 Rosenheim</p>
+
+			<p>Mo-Fr von 08:00-18:00 Uhr<br>
+			und nach Vereinbarung</p>
+		</aside>
+
+	</main>
+
+	<footer>
+		<p>Zahnarztpraxis Chmelitschek &copy; 2011</p>
+	</footer>
 </body>
 </html>
