--- a/01_company/index.html
+++ b/01_company/index.html
@@ -8,12 +8,14 @@
 <body>
 	<div class="container">
 		<header>
-			<img src="img/logo.png" alt="" class="center-image">
+			<a href="">
+				<img src="img/logo-2.png" alt="" class="logo">
+			</a>
 
 			<nav>
 				<ul>
 					<li><a href="#">Aktuelles</a></li>
-					<li><a href="#">Philosophie</a></li>
+					<li class="active"><a href="#">Philosophie</a></li>
 					<li><a href="#">Besonderheiten</a></li>
 					<li><a href="#">Partner</a></li>
 					<li><a href="#">Kontakt</a></li>
@@ -22,11 +24,11 @@
 			</nav>
 		</header>
 
-		<main>
-			<div class="photos">
-				<img src="img/pict.jpg" alt="">
-			</div>
+		<div class="photos">
+			<img src="img/pict.jpg" alt="">
+		</div>
 
+		<main>
 			<article>
 				<h1>Sehr geehrte Patienten,</h1>
 
