--- a/02_blog/index.html
+++ b/02_blog/index.html
@@ -6,6 +6,74 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
 </head>
 <body>
+	<div class="container">
+		<header>
+			<img src="img/logo.png" alt="logo">
+			<nav id="main-menu">
+				<a href="#">Journal</a>
+				<a href="#">About</a>
+				<a href="#">Work</a>
+				<a href="#">Contact</a>
+			</nav>
+		</header>
+
+		<main class="main-content">
+			<article class="main-article">
+				<img src="img/pic1.jpg" alt="">
+
+				<h2>Duis aute irure dolor in henderit in voluptate.</h2>
+
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...</p>
+
+				<button class="btn-cont-read">Continue Reading</button>
+			</article>
+
+			<article class="main-article">
+				<img src="img/pic2.jpg" alt="">
+					
+				<h2>Duis aute irure dolor in henderit in voluptate.</h2>
+
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...</p>
+
+				<button class="btn-cont-read">Continue Reading</button>
+			</article>
+		</main>
+
+		<aside>
+			<div class="aside-sect">
+				<h3>Search</h3>
+				<input type="text" placeholder="What are you looking for?" class="input-search">
+			</div>
+			<div class="aside-sect">
+				<h3>categories</h3>
+				<ul>
+					<li><a href="#">Weekend</a></li>
+					<li><a href="#">Nature</a></li>
+					<li><a href="#">Work</a></li>
+					<li><a href="#">Holiday</a></li>
+				</ul>
+			</div>
+			<div class="aside-sect">
+				<h3>Stay Tuned.</h3>
+				<input type="text" placeholder="Your Email" class="input-email">
+				<a href="#"><img src="img/continue.png" alt=""></a>
+			</div>
+			<img src="img/banner.jpg" alt="" class="banner">
+		</aside>
+
+		<div class="articles-nav">
+			<span class="nav-prev">&larr; Previous</span>
+			<span class="nav-next">&rarr; Next</span>
+		</div>
+		<footer>
+			<img src="img/logo_bottom.png" alt="">
+			<p>&copy; 2016 Blogin.com&#32;&#32;-&#32;&#32;All Rights Reserved&#32;&#32;-&#32;&#32;Find more free Templates at Pixelhint.com</p>
+		</footer>
+	</div>
 	
 </body>
 </html>
