--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>List of sytes:</h1>
 	<ul>
 		<li><a href="01_company/index.html">Company Site 1</a></li>
-		<li><a href="#">Site 2</a></li>
+		<li><a href="02_blog/index.html">Blog</a></li>
 		<li><a href="#">Site 3</a></li>
 		<li><a href="#">Site 4</a></li>
 		<li><a href="#">Site 5</a></li>
