--- a/index.html
+++ b/index.html
@@ -3,15 +3,52 @@
 <head>
 	<meta charset="UTF-8">
 	<title>List of my pages</title>
+	<style>
+		ul, li {
+			margin: 0;
+			padding: 0;
+		}
+		ul {
+			margin-left: 30px;
+			line-height: 2;
+		}
+		li img {
+			height: 1em;
+			/*margin-top: 2px;*/
+			/*display: inline-block;*/
+		}
+		li {
+			vertical-align: middle;
+		}
+		li a{
+			vertical-align: middle;
+		}
+	</style>
 </head>
 <body>
 	<h1>List of sytes:</h1>
 	<ul>
-		<li><a href="01_company/index.html">Company Site 1</a></li>
-		<li><a href="02_blog/index.html">Blog</a></li>
-		<li><a href="#">Site 3</a></li>
+		<li>
+			<a href="https://github.com/sashkot73/_study_makeup/tree/master/01_company">
+				<img src="GitHub_Logo.png" alt=""></a>
+			<a href="01_company/index.html">Company Site 1</a>
+		</li>
+		<li>
+			<a href="https://github.com/sashkot73/_study_makeup/tree/master/02_blog"><img src="GitHub_Logo.png" alt=""></a>
+			<a href="02_blog/index.html">Blog</a>
+		</li>
+		<li>
+			<a href="https://github.com/sashkot73/_study_makeup/tree/master/03_shop"><img src="GitHub_Logo.png" alt=""></a>
+			<a href="03_shop/index.html">Shop?</a>
+		</li>
+		<li>
+			<a href="https://github.com/sashkot73/_study_makeup/tree/master/04_golden"><img src="GitHub_Logo.png" alt=""></a>
+			<a href="04_golden/index.html">Shop?</a>
+		</li>
 		<li><a href="#">Site 4</a></li>
 		<li><a href="#">Site 5</a></li>
 	</ul>
+	<!-- Place this tag where you want the button to render. -->
+<a class="github-button" href="https://github.com/ntkme/github-buttons/subscription" data-icon="octicon-eye" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
 </body>
 </html>
