Initial markup for index.html

--- a/05_barbershop/index.html
+++ b/05_barbershop/index.html
@@ -4,8 +4,117 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
+	<!-- animated animate-when-almost-visible el-appear -->
 </head>
 <body>
-	<h1>Hello</h1>
+	<header class="main-header">
+		<nav class="main-nav">
+			<ul class="main-menu">
+				<li><a href="href"#"">ИНФОРМАЦИЯ</a></li>
+				<li><a href="href"#"">НОВОСТИ</a></li>
+				<li><a href="href"#"">ПРАЙС-ЛИСТ</a></li>
+				<li><a href="href"#"">МАГАЗИН</a></li>
+				<li><a href="href"#"">КОНТАКТЫ</a></li>
+			</ul>
+		</nav>
+		<div class="user-menu">
+			<a href="#">ВХОД</a>
+		</div>
+	</header>
+	<main class="content">
+		<img src="http://via.placeholder.com/371x155" alt=""" alt="" class="logo">
+
+		<section class="features">
+			<ul>
+				<li class="feature__item">
+					<b class="feature__slogan">БЫСТРО</b>
+					<p class="feature__desc">МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДАТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
+				</li>
+				<li class="feature__item">
+					<b class="feature__slogan">КРУТО</b>
+					<p class="feature__desc">ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. 					МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! 					ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+				</li>
+				<li class="feature__item">
+					<b class="feature__slogan">ДОРОГО</b>
+					<p class="feature__desc">НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
+				</li>
+			</ul>
+		</section>
+		<section class="news">
+			<h2>НОВОСТИ</h2>
+			<div class="news_article">
+				<p>НАМ НАКОНЕЦ ЗАВЕЗЛИ ЯГЕРМАЙСТЕР! ТЕПЕРЬ ВЫ МОЖЕТЕ ПРОПУСТИТЬ СТАКАНЧИК ВО ВРЕМЯ СТРИЖКИ</p>
+				<span>11 января</span>._18_января 
+			</div>
+			<div class="news_article">
+				<p>В НАШЕЙ КОМАНДЕ ПОПОЛНЕНИЕ, БОРИС «БРИТВА» СТРИГУНЕЦ, ОБЛАДAТЕЛЬ МНОЖЕСТВА ТИТУЛОВ И НАГРАД ПОПОЛНИЛ НАШИ СТРОЙНЫЕ РЯДЫ</p>
+				<span>18 января</span>
+			</div>
+			<a href="#" class="btn">ВСЕ НОВОСТИ</a>
+		</section>
+		<section class="galery">
+			<h2>ФОТОГАЛЕРЕЯ</h2>
+			<div class="galery-box">
+				<img src="http://via.placeholder.com/286x164" alt=""" alt="" class="galery-img">
+				<div class="galery-btns">
+					<button class="galery-prev">НАЗАД</button>
+					<button class="galery-prev">ВПЕРЕД</button>
+				</div>
+			</div>
+		</section>
+		<section class="contacts">
+			<h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
+			<p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+			АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
+			ТЕЛЕФОН: +7 (495) 666-02-66</p>
+			<p>ВРЕМЯ РАБОТЫ:<br>
+			ПН—ПТ: С 10:00 ДО 22:00</br>
+			СБ—ВС: С 10:00 ДО 19:00</p>
+		</section>
+		<section class="order">
+			<h2>ЗАПИСАТЬСЯ</h2>
+			<p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+			<div class="forms">
+				<form action="post">
+					<div class="form-input">
+						<label for="">ДАТА</label>
+						<input type="text" name="" placeholder="ДАТА">
+					</div>
+					<div class="form-input">
+						<label for="">ВРЕМЯ</label>
+						<input type="text" name="" placeholder="10:00">
+					</div>
+					<div class="form-input">
+						<label for="">ВАШЕ ИМЯ</label>
+						<input type="text" name="" placeholder="Борода">
+					</div>
+					<div class="form-input">
+						<label for="">ТЕЛЕФОН</label>
+						<input type="text" name="" placeholder="+7 123 456-78-90">
+					</div>
+				</form>
+			</div>
+		</section>
+	</main>
+	<footer class="main-footer">
+		<div class="addr">
+			БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+			АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+			КАК НАС НАЙТИ?<br>
+			ТЕЛЕФОН: +7 (495) 666-02-66
+		</div>
+		<div class="social">
+			<b>ДАВАЙТЕ ДРУЖИТЬ!</b>
+			<ul>
+				<li><img src="http://via.placeholder.com/43x43" alt="">vk</li>
+				<li><img src="http://via.placeholder.com/43x43" alt="">vk</li>
+				<li><img src="http://via.placeholder.com/43x43" alt="">vk</li>
+			</ul>
+		</div>
+		<div class="develop">
+			<span>РАЗРАБОТАНО</span>
+			<span>html academy</span>
+		</div>
+	</footer>
 </body>
 </html>
