--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
 		}
 		li img {
 			height: 1em;
-			/*margin-top: 2px;*/
-			/*display: inline-block;*/
-		}
-		li {
-			vertical-align: middle;
-		}
-		li a{
-			vertical-align: middle;
-		}
 	</style>
 </head>
 <body>
@@ -43,10 +34,12 @@
 		</li>
 		<li>
 			<a href="https://github.com/sashkot73/_study_makeup/tree/master/04_golden"><img src="GitHub_Logo.png" alt=""></a>
-			<a href="04_golden/index.html">Shop?</a>
+			<a href="04_golden/index.html">Golden</a>
 		</li>
-		<li><a href="#">Site 4</a></li>
-		<li><a href="#">Site 5</a></li>
+		<li>
+			<a href="https://github.com/sashkot73/_study_makeup/tree/master/05_barbershop"><img src="GitHub_Logo.png" alt=""></a>
+			<a href="05_barbershop/index.html">Barbershop</a>
+		</li>
 	</ul>
 	<!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/ntkme/github-buttons/subscription" data-icon="octicon-eye" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
