05. index.html is completed

--- a/05_barbershop/index.html
+++ b/05_barbershop/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head lang="ru">
-	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta charset="utf-8">
+	<title>document</title>
 	<link rel="stylesheet" href="styles.css">
 	<!-- animated animate-when-almost-visible el-appear -->
 </head>
@@ -10,111 +10,147 @@
 	<header class="main-header">
 		<nav class="main-nav">
 			<ul class="main-menu">
-				<li><a href="href"#"">ИНФОРМАЦИЯ</a></li>
-				<li><a href="href"#"">НОВОСТИ</a></li>
-				<li><a href="href"#"">ПРАЙС-ЛИСТ</a></li>
-				<li><a href="href"#"">МАГАЗИН</a></li>
-				<li><a href="href"#"">КОНТАКТЫ</a></li>
+				<li><a href="#">Информация</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Прайс-лист</a></li>
+				<li><a href="#">Магазин</a></li>
+				<li><a href="#">Контакты</a></li>
 			</ul>
 		</nav>
-		<div class="user-menu">
-			<a href="#">ВХОД</a>
-		</div>
+		<ul class="user-menu">
+			<li class="user-login">
+				<a href="#">Вход</a>
+			</li>
+		</ul>
 	</header>
 	<main class="content">
-		<img src="http://via.placeholder.com/371x155" alt=""" alt="" class="logo">
+		<img src="http://placehold.it/371x155" alt="" class="logo">
 
+		<h1 class="visual-hidden">Барбершоп «Бородинский»</h1>
 		<section class="features">
-			<ul>
+			<h2 class="visual-hidden">Наши преимущества</h2>
+			<ul class="features-list">
 				<li class="feature__item">
-					<b class="feature__slogan">БЫСТРО</b>
-					<p class="feature__desc">МЫ ДЕЛАЕМ СВОЮ РАБОТУ БЫСТРО! ДВА ЧАСА ПРОЛЕТЯТ НЕЗАМЕТНО И ВЫ — СЧАСТЛИВЫЙ ОБЛАДАТЕЛЬ СТИЛЬНОЙ СТРИЖКИ-МИНУТКИ!</p>
+					<h3>Быстро</h3>
+					<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
 				</li>
 				<li class="feature__item">
-					<b class="feature__slogan">КРУТО</b>
-					<p class="feature__desc">ЗАБУДЬТЕ, КАК ВЫ СТРИГЛИСЬ РАНЬШЕ. 					МЫ СДЕЛАЕМ ИЗ ВАС ЗВЕЗДУ ФУТБОЛА ИЛИ КИНО! 					ВО ВСЯКОМ СЛУЧАЕ ВНЕШНЕ.</p>
+					<h3>Круто</h3>
+					<p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! во всяком случае внешне.</p>
 				</li>
 				<li class="feature__item">
-					<b class="feature__slogan">ДОРОГО</b>
-					<p class="feature__desc">НАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
+					<h3>Дорого</h3>
+					<p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определеный статус?</p>
 				</li>
 			</ul>
 		</section>
+
 		<section class="news">
-			<h2>НОВОСТИ</h2>
+			<h2>Новости</h2>
 			<div class="news_article">
-				<p>НАМ НАКОНЕЦ ЗАВЕЗЛИ ЯГЕРМАЙСТЕР! ТЕПЕРЬ ВЫ МОЖЕТЕ ПРОПУСТИТЬ СТАКАНЧИК ВО ВРЕМЯ СТРИЖКИ</p>
-				<span>11 января</span>._18_января 
+				<p>Нам наконец завезли ягермайстер! теперь вы можете пропустить стаканчик во время стрижки</p>
+				<span>11 января</span>
 			</div>
 			<div class="news_article">
-				<p>В НАШЕЙ КОМАНДЕ ПОПОЛНЕНИЕ, БОРИС «БРИТВА» СТРИГУНЕЦ, ОБЛАДAТЕЛЬ МНОЖЕСТВА ТИТУЛОВ И НАГРАД ПОПОЛНИЛ НАШИ СТРОЙНЫЕ РЯДЫ</p>
+				<p>В нашей команде пополнение, борис «бритва» стригунец, обладaтель множества титулов и наград пополнил наши стройные ряды</p>
 				<span>18 января</span>
 			</div>
-			<a href="#" class="btn">ВСЕ НОВОСТИ</a>
+			<a href="#" class="btn">Все новости</a>
 		</section>
+
 		<section class="galery">
-			<h2>ФОТОГАЛЕРЕЯ</h2>
+			<h2>Фотогалерея</h2>
 			<div class="galery-box">
-				<img src="http://via.placeholder.com/286x164" alt=""" alt="" class="galery-img">
+				<img src="http://placehold.it/286x164" alt="" class="galery-img">
 				<div class="galery-btns">
-					<button class="galery-prev">НАЗАД</button>
-					<button class="galery-prev">ВПЕРЕД</button>
+					<button class="btn galery-prev">Назад</button>
+					<button class="btn galery-prev">Вперед</button>
 				</div>
 			</div>
 		</section>
+
 		<section class="contacts">
-			<h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
-			<p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-			АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, Б. КОНЮШЕННАЯ, Д. 19/8<br>
-			ТЕЛЕФОН: +7 (495) 666-02-66</p>
-			<p>ВРЕМЯ РАБОТЫ:<br>
-			ПН—ПТ: С 10:00 ДО 22:00</br>
-			СБ—ВС: С 10:00 ДО 19:00</p>
+			<h2>Контактная информация</h2>
+			<p>Барбершоп «бородинский»<br>
+			адрес: г. Санкт-петербург, б. Конюшенная, д. 19/8<br>
+			телефон: +7 (495) 666-02-66</p>
+			<p>Время работы:<br>
+			пн—пт: с 10:00 до 22:00<br>
+			сб—вс: с 10:00 до 19:00</p>
+			<a href="map.html" class="btn">Как проехать</a>
+			<a href="contacts.html">Обратная связь</a>
 		</section>
+
 		<section class="order">
-			<h2>ЗАПИСАТЬСЯ</h2>
-			<p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
-			<div class="forms">
+			<h2>Записаться</h2>
+			<p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
+			<div class="form">
 				<form action="post">
-					<div class="form-input">
-						<label for="">ДАТА</label>
-						<input type="text" name="" placeholder="ДАТА">
-					</div>
-					<div class="form-input">
-						<label for="">ВРЕМЯ</label>
-						<input type="text" name="" placeholder="10:00">
-					</div>
-					<div class="form-input">
-						<label for="">ВАШЕ ИМЯ</label>
-						<input type="text" name="" placeholder="Борода">
-					</div>
-					<div class="form-input">
-						<label for="">ТЕЛЕФОН</label>
-						<input type="text" name="" placeholder="+7 123 456-78-90">
-					</div>
+					<p class="form-input">
+						<label>Дата</label>
+						<input type="text" name="date" placeholder="дата">
+					</p>
+					<p class="form-input">
+						<label>Время</label>
+						<input type="text" name="time" placeholder="10:00">
+					</p>
+					<p class="form-input">
+						<label>Ваше имя</label>
+						<input type="text" name="name" placeholder="борода">
+					</p>
+					<p class="form-input">
+						<label>Телефон</label>
+						<input type="text" name="phone" placeholder="+7 123 456-78-90">
+					</p>
 				</form>
 			</div>
 		</section>
 	</main>
+
 	<footer class="main-footer">
-		<div class="addr">
-			БАРБЕРШОП «БОРОДИНСКИЙ»<br>
-			АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-			КАК НАС НАЙТИ?<br>
-			ТЕЛЕФОН: +7 (495) 666-02-66
+		<div class="footer-addr">
+			Барбершоп «бородинский»<br>
+			адрес: г. Санкт-петербург, ул. б. Конюшенная, д. 19/8<br>
+			как нас найти?<br>
+			телефон: +7 (495) 666-02-66
 		</div>
-		<div class="social">
-			<b>ДАВАЙТЕ ДРУЖИТЬ!</b>
+		<div class="footer-social">
+			<b>Давайте дружить!</b>
 			<ul>
-				<li><img src="http://via.placeholder.com/43x43" alt="">vk</li>
-				<li><img src="http://via.placeholder.com/43x43" alt="">vk</li>
-				<li><img src="http://via.placeholder.com/43x43" alt="">vk</li>
+				<li><img src="http://placehold.it/43x43" alt="">vk</li>
+				<li><img src="http://placehold.it/43x43" alt="">vk</li>
+				<li><img src="http://placehold.it/43x43" alt="">vk</li>
 			</ul>
 		</div>
-		<div class="develop">
-			<span>РАЗРАБОТАНО</span>
-			<span>html academy</span>
+		<div class="footer-copy">
+			<span>Разработано</span>
+			<span>HTML ACADEMY</span>
 		</div>
 	</footer>
+
+	<section class="modal modal-login">
+		<h2>Личный кабинет</h2>
+		<p>Введите пожалуйста свой логин и пароль</p>
+		<form class="login-form" action="https://echo.htmlacademy.ru">
+			<p>
+				<input class="login-icon-user" name="login" type="text" placeholder="логин">
+			</p>
+			<p>
+				<input class="login-icon-pass"  name="password" type="text" placeholder="пароль">
+			</p>
+			<p class="login-info">
+				<input type="text" placeholder="пароль" class="password">
+				<input type="checkbox">Запомните меня
+				<a href="#">Я забыл пароль!</a>
+			</p>
+			<button class="btn">Войти</button>
+		</form>
+		<span class="modal-close">x</span>
+	</section>
+
+	<section class="modal modal-map">
+		<h2 class="visualy-hidden">Как добраться</h2>
+		<img src="map.jpg" alt="">
+	</section>
 </body>
 </html>
