05-added smarkup for shop.html

--- a/05_barbershop/index.html
+++ b/05_barbershop/index.html
@@ -12,8 +12,8 @@
 			<ul class="main-menu">
 				<li><a href="#">Информация</a></li>
 				<li><a href="#">Новости</a></li>
-				<li><a href="#">Прайс-лист</a></li>
-				<li><a href="#">Магазин</a></li>
+				<li><a href="price.html">Прайс-лист</a></li>
+				<li><a href="shop.html">Магазин</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
 		</nav>
@@ -109,7 +109,7 @@
 
 	<footer class="main-footer">
 		<div class="footer-addr">
-			Барбершоп «бородинский»<br>
+			Барбершоп «Бородинский»<br>
 			адрес: г. Санкт-петербург, ул. б. Конюшенная, д. 19/8<br>
 			как нас найти?<br>
 			телефон: +7 (495) 666-02-66
