Added images and markup for new site nerds

--- a/05_barbershop/index.html
+++ b/05_barbershop/index.html
@@ -24,12 +24,12 @@
 		</ul>
 	</header>
 	<main class="content">
-		<img src="http://placehold.it/371x155" alt="" class="logo">
+		<img src="img/index-logo.png" alt="" class="logo">
 
 		<h1 class="visual-hidden">Барбершоп «Бородинский»</h1>
 		<section class="features">
 			<h2 class="visual-hidden">Наши преимущества</h2>
-			<ul class="features-list">
+			<ul class="features-list clearfix">
 				<li class="feature__item">
 					<h3>Быстро</h3>
 					<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
@@ -45,64 +45,69 @@
 			</ul>
 		</section>
 
-		<section class="news">
-			<h2>Новости</h2>
-			<div class="news_article">
-				<p>Нам наконец завезли ягермайстер! теперь вы можете пропустить стаканчик во время стрижки</p>
-				<span>11 января</span>
-			</div>
-			<div class="news_article">
-				<p>В нашей команде пополнение, борис «бритва» стригунец, обладaтель множества титулов и наград пополнил наши стройные ряды</p>
-				<span>18 января</span>
-			</div>
-			<a href="#" class="btn">Все новости</a>
-		</section>
 
-		<section class="galery">
-			<h2>Фотогалерея</h2>
-			<div class="galery-box">
-				<img src="http://placehold.it/286x164" alt="" class="galery-img">
-				<div class="galery-btns">
-					<button class="btn galery-prev">Назад</button>
-					<button class="btn galery-prev">Вперед</button>
+		<div class="box clearfix">
+			
+			<section class="news">
+				<h2>Новости</h2>
+				<div class="news_article">
+					<p>Нам наконец завезли ягермайстер! теперь вы можете пропустить стаканчик во время стрижки</p>
+					<span>11 января</span>
 				</div>
-			</div>
-		</section>
+				<div class="news_article">
+					<p>В нашей команде пополнение, борис «бритва» стригунец, обладaтель множества титулов и наград пополнил наши стройные ряды</p>
+					<span>18 января</span>
+				</div>
+				<a href="#" class="btn">Все новости</a>
+			</section>
 
-		<section class="contacts">
-			<h2>Контактная информация</h2>
-			<p>Барбершоп «бородинский»<br>
-			адрес: г. Санкт-петербург, б. Конюшенная, д. 19/8<br>
-			телефон: +7 (495) 666-02-66</p>
-			<p>Время работы:<br>
-			пн—пт: с 10:00 до 22:00<br>
-			сб—вс: с 10:00 до 19:00</p>
-			<a href="map.html" class="btn">Как проехать</a>
-			<a href="contacts.html">Обратная связь</a>
-		</section>
+			<section class="galery">
+				<h2>Фотогалерея</h2>
+				<div class="galery-box">
+					<img src="img/galery1.jpg" alt="" class="galery-img">
+					<div class="galery-btns">
+						<button class="btn galery-prev">Назад</button>
+						<button class="btn galery-prev">Вперед</button>
+					</div>
+				</div>
+			</section>
+		</div>
 
-		<section class="order">
-			<h2>Записаться</h2>
-			<p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-			<div class="form">
-				<form action="post">
-					<p class="form-input">
-						<label>Дата</label>
-						<input type="text" name="date" placeholder="дата">
-					</p>
-					<p class="form-input">
-						<label>Время</label>
-						<input type="text" name="time" placeholder="10:00">
-					</p>
-					<p class="form-input">
-						<label>Ваше имя</label>
-						<input type="text" name="name" placeholder="борода">
-					</p>
-					<p class="form-input">
-						<label>Телефон</label>
-						<input type="text" name="phone" placeholder="+7 123 456-78-90">
-					</p>
-				</form>
+		<div class="box clearfix">
+			<section class="contacts">
+				<h2>Контактная информация</h2>
+				<p>Барбершоп «бородинский»<br>
+				адрес: г. Санкт-петербург, б. Конюшенная, д. 19/8<br>
+				телефон: +7 (495) 666-02-66</p>
+				<p>Время работы:<br>
+				пн—пт: с 10:00 до 22:00<br>
+				сб—вс: с 10:00 до 19:00</p>
+				<a href="map.html" class="btn">Как проехать</a>
+				<a href="contacts.html">Обратная связь</a>
+			</section>
+			<section class="order">
+				<h2>Записаться</h2>
+				<p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
+				<div class="form">
+					<form action="post">
+						<p class="form-input">
+							<label>Дата</label>
+							<input type="text" name="date" placeholder="дата">
+						</p>
+						<p class="form-input">
+							<label>Время</label>
+							<input type="text" name="time" placeholder="10:00">
+						</p>
+						<p class="form-input">
+							<label>Ваше имя</label>
+							<input type="text" name="name" placeholder="борода">
+						</p>
+						<p class="form-input">
+							<label>Телефон</label>
+							<input type="text" name="phone" placeholder="+7 123 456-78-90">
+						</p>
+					</form>
+				</div>
 			</div>
 		</section>
 	</main>
@@ -117,9 +122,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul>
-				<li><img src="http://placehold.it/43x43" alt="">vk</li>
-				<li><img src="http://placehold.it/43x43" alt="">vk</li>
-				<li><img src="http://placehold.it/43x43" alt="">vk</li>
+				<li><img src="img/soc-vk.png" alt="">vk</li>
+				<li><img src="img/soc-fb.png" alt="">fb</li>
+				<li><img src="img/soc-in.png" alt="">in</li>
 			</ul>
 		</div>
 		<div class="footer-copy">
