--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 			<a href="https://github.com/sashkot73/_study_makeup/tree/master/05_barbershop"><img src="GitHub_Logo.png" alt=""></a>
 			<a href="05_barbershop/index.html">Barbershop</a>
 		</li>
+		<li>
+			<a href="https://github.com/sashkot73/_study_makeup/tree/master/06_nerds"><img src="GitHub_Logo.png" alt=""></a>
+			<a href="06_nerds/index.html">Nerds</a>
+		</li>
 	</ul>
 	<!-- Place this tag where you want the button to render. -->
 <a class="github-button" href="https://github.com/ntkme/github-buttons/subscription" data-icon="octicon-eye" aria-label="Watch ntkme/github-buttons on GitHub">Watch</a>
