Added some pics

--- a/05_barbershop/shop.html
+++ b/05_barbershop/shop.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header class="main-header">
-		<img src="http://placehold.it/111x24" alt="" class="logo">
+		<img src="img/logo.png" alt="" class="logo" width="111" height="24">
 		<nav class="main-nav">
 			<ul class="main-menu">
 				<li><a href="#">Информация</a></li>
