--- a/05_barbershop/index.html
+++ b/05_barbershop/index.html
@@ -3,11 +3,13 @@
 <head lang="ru">
 	<meta charset="utf-8">
 	<title>document</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
+
 	<!-- animated animate-when-almost-visible el-appear -->
 </head>
 <body>
-	<header class="main-header">
+	<header class="main-header container">
 		<nav class="main-nav">
 			<ul class="main-menu">
 				<li><a href="#">Информация</a></li>
@@ -23,13 +25,13 @@
 			</li>
 		</ul>
 	</header>
-	<main class="content">
+	<main class="container">
 		<img src="img/index-logo.png" alt="" class="logo">
 
-		<h1 class="visual-hidden">Барбершоп «Бородинский»</h1>
+		<h1 class="hidden">Барбершоп «Бородинский»</h1>
 		<section class="features">
-			<h2 class="visual-hidden">Наши преимущества</h2>
-			<ul class="features-list clearfix">
+			<h2 class="hidden">Наши преимущества</h2>
+			<ul class="feature-list clearfix">
 				<li class="feature__item">
 					<h3>Быстро</h3>
 					<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки!</p>
@@ -67,13 +69,13 @@
 					<img src="img/galery1.jpg" alt="" class="galery-img">
 					<div class="galery-btns">
 						<button class="btn galery-prev">Назад</button>
-						<button class="btn galery-prev">Вперед</button>
+						<button class="btn galery-next">Вперед</button>
 					</div>
 				</div>
 			</section>
 		</div>
 
-		<div class="box clearfix">
+		<div class="box">
 			<section class="contacts">
 				<h2>Контактная информация</h2>
 				<p>Барбершоп «бородинский»<br>
@@ -83,7 +85,7 @@
 				пн—пт: с 10:00 до 22:00<br>
 				сб—вс: с 10:00 до 19:00</p>
 				<a href="map.html" class="btn">Как проехать</a>
-				<a href="contacts.html">Обратная связь</a>
+				<a href="contacts.html" class="btn">Обратная связь</a>
 			</section>
 			<section class="order">
 				<h2>Записаться</h2>
@@ -106,6 +108,7 @@
 							<label>Телефон</label>
 							<input type="text" name="phone" placeholder="+7 123 456-78-90">
 						</p>
+
 					</form>
 				</div>
 			</div>
@@ -113,23 +116,25 @@
 	</main>
 
 	<footer class="main-footer">
-		<div class="footer-addr">
-			Барбершоп «Бородинский»<br>
-			адрес: г. Санкт-петербург, ул. б. Конюшенная, д. 19/8<br>
-			как нас найти?<br>
-			телефон: +7 (495) 666-02-66
-		</div>
-		<div class="footer-social">
-			<b>Давайте дружить!</b>
-			<ul>
-				<li><img src="img/soc-vk.png" alt="">vk</li>
-				<li><img src="img/soc-fb.png" alt="">fb</li>
-				<li><img src="img/soc-in.png" alt="">in</li>
-			</ul>
-		</div>
-		<div class="footer-copy">
-			<span>Разработано</span>
-			<span>HTML ACADEMY</span>
+		<div class="container">
+			<div class="footer-addr">
+				Барбершоп «Бородинский»<br>
+				адрес: г. Санкт-петербург, ул. б. Конюшенная, д. 19/8<br>
+				<a href="#">как нас найти?</a><br>
+				телефон: +7 (495) 666-02-66
+			</div>
+			<div class="footer-social">
+				<b>Давайте дружить!</b>
+				<ul>
+					<li><img src="img/soc-vk.png" alt="">vk</li>
+					<li><img src="img/soc-fb.png" alt="">fb</li>
+					<li><img src="img/soc-in.png" alt="">in</li>
+				</ul>
+			</div>
+			<div class="footer-copy">
+				<div>Разработано</div>
+				<div><a href="#" class="btn">HTML ACADEMY</a></div>
+			</div>
 		</div>
 	</footer>
 
@@ -155,7 +160,7 @@
 
 	<section class="modal modal-map">
 		<h2 class="visualy-hidden">Как добраться</h2>
-		<img src="map.jpg" alt="">
+		<img src="img/map.jpg" alt="">
 	</section>
 </body>
 </html>
