--- a/06_nerds/catalog.html
+++ b/06_nerds/catalog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>NerdsDocument</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header>
@@ -25,6 +26,10 @@
 	</header>
 
 	<main>
+		<div class="map">
+			<img src="img/map.jpg" alt="">
+			<img src="img/map-marker.png" class="img-marker" alt="">
+		</div>
 	</main>
 	<footer class="main-footer">
 		<ul>
